fix(ThingsWeDo-Grid): the grid was not responsive on small devices so I implemented a mobile-first approach

--- a/src/index.css
+++ b/src/index.css
@@ -122,7 +122,7 @@ h6 {
   --fw-medium: 500;
   --fw-semibold: 600;
   --fw-bold: 700;
-  --fw-extrabold: 800;
+  --fw-extraBold: 800;
   --fw-black: 900;
 
   --fs-h1: 4.7rem;
